add achievement and notification demo cdoe